# eventflow

./: pyproject.toml  ruff.toml
src/core/value_objects/: __init__.py  event_type.py  time_range.py  user_id.py
src/domain/entities/: __init__.py  event.py
src/domain/value_objects/: money.py
tests/unit/core/value_objects/: test_event_type.py  test_money.py  test_time_range.py  test_user_id.py
tests/unit/domain/entities/: __init__.py  test_event.py
tests/unit/domain/value_objects/: test_event_type.py  test_money.py  test_time_range.py  test_user_id.py
